# derl

./: .gitignore  README.md  config.py  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
derl/: anneal.py  models.py  models_test.py  policies.py  policies_test.py  torch_test_case.py
derl/alg/: a2c.py  a2c_test.py  common.py  dqn.py  dqn_test.py  ppo.py  ppo_test.py  sac_test.py  test.py
derl/env/: __init__.py  atari_wrappers.py  atari_wrappers_test.py  env_batch.py  make_env.py  mujoco_wrappers.py  summarize.py
derl/factory/: a2c.py  dqn.py  factory.py  ppo.py  sac.py
derl/runners/: env_runner.py  experience_replay.py  onpolicy.py  storage.py  sum_tree.py  sum_tree_test.py  summary.py  trajectory_transforms.py
derl/scripts/: derl.py  parsers.py
testdata/a2c/atari/: interactions.npz  losses.npy  losses.pt
testdata/models/: dqn-base-outputs.pt
testdata/ppo/atari/: losses.npy  losses.pt
testdata/ppo/mujoco/: grads.npz  grads.pt  interactions.npz  losses.npy  losses.npy.npz  losses.pt
testdata/sac/mujoco/: grads.npz  grads.pt  interactions.npz  losses.npy  losses.pt
